Update CreateClaim Command

--- a/force-app/main/default/lwc/createClaim/createClaim.html
+++ b/force-app/main/default/lwc/createClaim/createClaim.html
@@ -1,3 +1,4 @@
+<!--Code Beginning-->
 <template>
 <div class="header">
   <div class="slds-align_absolute-center" style="font-size:20px;font-weight:bold;position:relative;top:3rem;">CREATE FUNERAL CLAIM</div>
